<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_normal"
    tools:context="app.MainActivity">

    <EditText
        android:id="@+id/editTextUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:hint="@string/hint_download"
        android:maxLines="2"
        android:text="https://d2gjspw5enfim.cloudfront.net/qot_web/tignum_x_video.mp4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/loadingPercentage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/loadingPercentage"
        app:layout_constraintTop_toTopOf="@+id/loadingPercentage"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/loadingPercentage"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUrl"
        tools:text="45%" />

    <Button
        android:id="@+id/btnDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/download"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingPercentage" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@android:string/cancel"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingPercentage" />

    <Button
        android:id="@+id/btnPause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/pause"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnDownload"
        app:layout_constraintRight_toLeftOf="@+id/btnDownload"
        app:layout_constraintTop_toTopOf="@+id/btnDownload"
        tools:visibility="visible" />


    <Button
        android:id="@+id/btnResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:text="@string/resume"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnDownload"
        app:layout_constraintRight_toLeftOf="@+id/btnDownload"
        app:layout_constraintTop_toTopOf="@+id/btnDownload"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/txtDownloadTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/download_files_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDownload" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videoList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDownloadTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>